deployments/advanced-analysis/manifests/base/advanced-analysis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: advanced-analysis
spec:
  ports:
  - name: http
    targetPort: 8100
    port: 80
  type: ClusterIP
  selector:
    app: advanced-analysis
