deployments/advanced-analysis/manifests/base/advanced-analysis-dep.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: advanced-analysis
  namespace: advanced-analysis
  labels:
    app: advanced-analysis
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: advanced-analysis
  template:
    metadata:
      labels:
        app: advanced-analysis
        version: latest
    spec:
      nodeSelector:
        group: services
      containers:
        - name: advanced-analysis
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advanced-analysis-ingress
status:
  loadBalancer: {}
spec:
  ingressClassName: nginx
  rules:
    - host: advanced-analysis.curibio-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: advanced-analysis
                port:
                  number: 80
